recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:4: error: not found: value gache
    gache(angle)
    ^